completely inline ColumnStore.java class to avoid reduncancies